tests/baselines/reference/moduleAsBaseType.errors.txt
==== tests/cases/compiler/moduleAsBaseType.ts (3 errors) ====
    module M {}
    class C extends M {}
                    ~
!!! error TS2304: Cannot find name 'M'.
    interface I extends M { }
                        ~
!!! error TS2304: Cannot find name 'M'.
    class C2 implements M { }
                        ~
!!! error TS2304: Cannot find name 'M'.